--- a/libraries/ui-library/src/global/base/colors.css
+++ b/libraries/ui-library/src/global/base/colors.css
@@ -245,6 +245,8 @@ html {
   --six-rating-color: var(--six-color-web-rock-500);
   --six-rating-color-active: var(--six-color-success-600);
 
+  --six-root-main-background-color: var(--six-color-white);
+
   --six-scrollbar-background-color: var(--six-color-web-rock-300);
   --six-scrollbar-thumb-color: var(--six-color-web-rock-500);
   --six-scrollbar-thumb-hover-color: var(--six-color-web-rock-600);
@@ -274,7 +276,7 @@ html {
   --six-alert-background-color: var(--needed-additional-color);
   --six-alert-border-color: var(--six-color-web-rock-900);
   --six-alert-color: var(--six-color-web-rock-400);
-  --six-alert-primary-color: var(--six-color-web-rock-800);
+  --six-alert-primary-color: var(--six-color-web-rock-700);
 
   --six-card-border-color: var(--six-color-web-rock-900);
 
